--- a/style.scss
+++ b/style.scss
@@ -1090,6 +1090,8 @@ body{
   }
   .footer-bottom{
     width: 100%;
+    margin-top: 20px;
+    border-top: 1px solid var(--accent-color);
     height: 30%;
     display: flex;
     justify-content: center;
@@ -1099,15 +1101,6 @@ body{
   p{
     color: var(--text);
     position: relative;
-    &::before{
-      background-color: var(--text);
-      content: "";
-      width: 300%;
-      height: 1px;
-      position: absolute;
-      top: -10px;
-      left: -100%;
-    }
   }
 }
 
