--- a/style.css
+++ b/style.css
@@ -674,6 +674,20 @@ body {
   transition: 300ms linear;
 }
 
+.work-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.work-container .recent-work {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
 .contact {
   padding: 20px 0 !important;
 }
@@ -1840,5 +1854,362 @@ body {
   0% {
     transform: rotate(360deg);
   }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.wrapper {
+  width: 380px;
+  padding: 25px 30px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 15px;
+  background: var(--secondary);
+  box-shadow: 0px 6px 15px var(--shadow-color);
+}
+.wrapper.minimalized {
+  height: 80px;
+  width: 80px;
+  overflow: visible;
+  border-radius: 8px;
+  transition: all 300ms linear;
+}
+.wrapper.minimalized.paused .img-area {
+  -webkit-animation: rotate 1s infinite linear;
+          animation: rotate 1s infinite linear;
+}
+.wrapper.minimalized .top-bar {
+  position: absolute;
+  top: 0;
+}
+.wrapper.minimalized .top-bar .material-icons, .wrapper.minimalized .top-bar span {
+  display: none;
+}
+.wrapper.minimalized .top-bar .minimalize {
+  display: block;
+  margin-top: -30px;
+  margin-left: -30px;
+  opacity: 0;
+}
+.wrapper.minimalized .img-area {
+  height: 50px;
+  width: 50px;
+  left: 20%;
+  top: 0;
+  margin-top: 15px;
+  position: absolute;
+  border-radius: 50%;
+  border: 1px solid var(--accent-color);
+}
+.wrapper.minimalized .img-area .dot {
+  border: 2px solid var(--accent-color);
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  z-index: 1;
+}
+.wrapper.minimalized .img-area img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: grayscale(100%);
+}
+.wrapper.minimalized .song-details {
+  opacity: 0;
+  position: absolute;
+  width: 180px;
+  height: 50px;
+  top: -10px;
+  left: 90px;
+  overflow: hidden;
+  text-align: left;
+}
+.wrapper.minimalized .song-details .name {
+  font-size: 14px;
+  width: 100%;
+  height: 30px;
+  line-height: 0.9;
+}
+.wrapper.minimalized .song-details .artist {
+  font-size: 12px;
+  line-height: normal;
+}
+.wrapper.minimalized.active {
+  transition: all 300ms linear;
+  width: 380px;
+  opacity: 1;
+}
+.wrapper.minimalized.active .song-details {
+  opacity: 1;
+}
+.wrapper.minimalized.active .minimalize {
+  opacity: 1;
+  width: 80px;
+}
+.wrapper.minimalized.active .img-area {
+  left: 5%;
+}
+.wrapper.minimalized.active .controls {
+  display: flex;
+}
+.wrapper.minimalized.active .progress-area {
+  display: block;
+}
+.wrapper.minimalized .progress-area {
+  height: 2px;
+  display: none;
+  margin-top: -25px;
+  width: 100%;
+  margin-left: 0px;
+}
+.wrapper.minimalized .song-timer {
+  display: none;
+}
+.wrapper.minimalized .controls {
+  position: absolute;
+  right: 25px;
+  width: 20%;
+  margin-left: 0px;
+  margin-top: 15px;
+  display: none;
+}
+.wrapper.minimalized .controls i {
+  font-size: 24px;
+}
+.wrapper.minimalized .controls #more-music, .wrapper.minimalized .controls #repeat-plist {
+  display: none;
+}
+.wrapper.minimalized .play-pause {
+  margin: 0 35px;
+}
+.wrapper.minimalized .play-pause::before {
+  width: 30px;
+  height: 30px;
+}
+.wrapper i {
+  cursor: pointer;
+}
+
+.top-bar, .progress-area .song-timer,
+.controls, .music-list .header, .music-list ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.top-bar i {
+  font-size: 30px;
+  color: var(--text);
+}
+.top-bar i:first-child {
+  margin-left: -7px;
+}
+.top-bar span {
+  font-size: 18px;
+  margin-left: -3px;
+  color: var(--text);
+}
+
+.img-area {
+  width: 100%;
+  height: 256px;
+  overflow: hidden;
+  margin-top: 25px;
+  border-radius: 15px;
+  box-shadow: 0px 6px 12px var(--shadow-color);
+}
+.img-area img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.song-details {
+  text-align: center;
+  margin: 30px 0;
+}
+.song-details p {
+  color: var(--text);
+}
+.song-details .name {
+  font-size: 21px;
+}
+.song-details .artist {
+  font-size: 18px;
+  opacity: 0.9;
+  line-height: 35px;
+}
+
+.progress-area {
+  height: 6px;
+  width: 100%;
+  border-radius: 50px;
+  background: #d4d4d4;
+  cursor: pointer;
+}
+.progress-area .progress-bar {
+  height: inherit;
+  width: 0%;
+  position: relative;
+  border-radius: inherit;
+  background: var(--accent-color);
+}
+.progress-area .progress-bar::before {
+  content: "";
+  position: absolute;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  top: 50%;
+  right: -5px;
+  z-index: 2;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-50%);
+  background: inherit;
+  transition: opacity 0.2s ease;
+}
+.progress-area:hover .progress-bar::before {
+  opacity: 1;
+  pointer-events: auto;
+}
+.progress-area .song-timer {
+  margin-top: 2px;
+}
+.progress-area .song-timer span {
+  font-size: 13px;
+  color: var(--text);
+}
+
+.controls {
+  margin: 40px 0 5px 0;
+}
+.controls i {
+  font-size: 28px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background: var(--text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.controls i i::nth-child(2), .controls i i::nth-child(4) {
+  font-size: 43px;
+}
+.controls #prev {
+  margin-right: -13px;
+}
+.controls #next {
+  margin-left: -13px;
+}
+.controls .play-pause {
+  height: 54px;
+  width: 54px;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.controls .play-pause::before {
+  position: absolute;
+  content: "";
+  height: 43px;
+  width: 43px;
+  border-radius: inherit;
+  border: 1px solid var(--accent-color);
+}
+.controls .play-pause i {
+  background: var(--text);
+  -webkit-background-clip: text;
+          background-clip: text;
+  position: absolute;
+}
+
+.music-list {
+  position: absolute;
+  background: var(--navbar-color);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  width: 100%;
+  left: 0;
+  bottom: -55%;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 5;
+  padding: 15px 30px;
+  border-radius: 15px;
+  box-shadow: 0px -5px 10px var(--shadow-color);
+  transition: all 0.15s ease-out;
+}
+.music-list.show {
+  bottom: 0;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.header .row {
+  display: flex;
+  align-items: center;
+  font-size: 19px;
+  color: var(--text);
+}
+.header .row i {
+  cursor: default;
+}
+.header .row span {
+  margin-left: 5px;
+}
+.header #close {
+  font-size: 22px;
+  color: var(--text);
+}
+
+.music-list ul {
+  margin: 10px 0;
+  max-height: 260px;
+  overflow: auto;
+}
+.music-list ul::-webkit-scrollbar {
+  width: 0px;
+}
+.music-list ul li {
+  list-style: none;
+  display: flex;
+  cursor: pointer;
+  padding-bottom: 10px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid var(--accent-color);
+}
+.music-list ul li:last-child {
+  border-bottom: 0px;
+}
+.music-list ul li .row span {
+  font-size: 17px;
+  color: var(--text) !important;
+}
+.music-list ul li .row p {
+  opacity: 0.9;
+  color: var(--text) !important;
+}
+.music-list ul li .audio-duration {
+  font-size: 16px;
+  color: var(--text) !important;
+}
+.music-list ul li.playing {
+  pointer-events: none;
 }
 /*# sourceMappingURL=style.css.map */
