--- a/style.scss
+++ b/style.scss
@@ -653,6 +653,32 @@ body{
     }
 
 }
+///////////////////////////////// My Work /////////////////////////////////////
+
+.work-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  .recent-work{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
 ////////////////////////////////// Contact //////////////////////////////////
 
 
@@ -1686,3 +1712,401 @@ body{
     transform: rotate(360deg);
     }
   }
+  /////////////////////////////////////
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////// MUSIC PLAYER //////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+
+
+  @keyframes rotate{
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(360deg);
+    }
+  }
+  .wrapper{
+    width: 380px;
+    padding: 25px 30px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 15px;
+    background: var(--secondary);
+    box-shadow: 0px 6px 15px var(--shadow-color);
+  
+    &.minimalized{
+      height: 80px;
+      width: 80px;
+      overflow: visible;
+      border-radius: 8px;
+      transition: all 300ms linear;
+      &.paused{
+        .img-area{
+          animation: rotate 1s infinite linear;
+        }
+      }
+      .top-bar{
+        // display: none;
+        position: absolute;
+        top: 0;
+        .material-icons, span{
+          display: none;
+        }
+        .minimalize{
+          display: block;
+          margin-top: -30px;
+          margin-left: -30px;
+          opacity: 0;
+        }
+      }
+      .img-area{
+        height: 50px;
+        width: 50px;
+        left: 20%;
+        // transform: translateX(-50%);
+        top: 0;
+        margin-top: 15px;
+        position: absolute;
+        border-radius: 50%;
+        border: 1px solid var(--accent-color);
+
+        .dot{
+          border: 2px solid var(--accent-color);
+          width: 15px;
+          height: 15px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%,-50%);
+          border-radius: 50%;
+          z-index: 1;
+        }
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          filter: grayscale(100%);
+        }
+      }
+      .song-details{
+        opacity: 0;
+        position: absolute;
+        width: 180px;
+        height: 50px;
+        top: -10px;
+        left: 90px;
+        overflow: hidden;
+        text-align: left;
+        .name{
+          font-size: 14px;
+          width: 100%;
+          height: 30px;
+          line-height: 0.9;
+        }
+        .artist{
+          font-size: 12px;
+          line-height: normal;
+        }
+      }
+      &.active{
+        transition: all 300ms linear;
+        width: 380px;
+        opacity: 1;
+        .song-details{
+          opacity: 1;
+        }
+        .minimalize{
+          opacity: 1;
+          width: 80px;
+        }
+        .img-area{
+          left: 5%;
+        }
+        .controls{
+          display: flex;
+        }
+        .progress-area{
+          display: block;
+        }
+      }
+      .progress-area{
+        height: 2px;
+        display: none;
+        margin-top: -25px;
+        width: 100%;
+        margin-left: 0px;
+      }
+      .song-timer{
+        display: none;
+      }
+      .controls{
+        position: absolute;
+        right: 25px;
+        // padding: 5px;
+        width: 20%;
+        margin-left: 0px;
+        margin-top: 15px;
+        display: none;
+        i{
+          font-size: 24px;
+        }
+        #more-music, #repeat-plist{
+          display: none;
+        }
+      }
+      .play-pause{
+        margin: 0 35px;
+        &::before{
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+    i{
+      cursor: pointer;
+    }
+  
+  }
+   
+  .top-bar, .progress-area .song-timer, 
+  .controls, .music-list .header, .music-list ul li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .top-bar {
+    i{
+      font-size: 30px;
+      color: var(--text);
+      &:first-child{
+        margin-left: -7px;
+      }
+    }
+    span{
+      font-size: 18px;
+      margin-left: -3px;
+      color: var(--text);
+    }
+  }
+  .img-area{
+    width: 100%;
+    height: 256px;
+    overflow: hidden;
+    margin-top: 25px;
+    border-radius: 15px;
+    box-shadow: 0px 6px 12px var(--shadow-color);
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  } 
+  .song-details{
+    text-align: center;
+    margin: 30px 0;
+    p{
+      color: var(--text);
+    }
+    .name{
+      font-size: 21px;
+    }
+    .artist{
+      font-size: 18px;
+      opacity: 0.9;
+      line-height: 35px;
+    }
+  }
+  .progress-area{
+    height: 6px;
+    width: 100%;
+    border-radius: 50px;
+    background: rgb(212, 212, 212);
+    cursor: pointer;
+    .progress-bar{
+      height: inherit;
+      width: 0%;
+      position: relative;
+      border-radius: inherit;
+      background: var(--accent-color);
+      &::before{
+        content: "";
+        position: absolute;
+        height: 12px;
+        width: 12px;
+        border-radius: 50%;
+        top: 50%;
+        right: -5px;
+        z-index: 2;
+        opacity: 0;
+        pointer-events: none;
+        transform: translateY(-50%);
+        background: inherit;
+        transition: opacity 0.2s ease;
+      }
+    }
+    &:hover{
+      .progress-bar::before{
+        opacity: 1;
+        pointer-events: auto;
+      }
+    }
+    .song-timer{
+      margin-top: 2px;
+      span{
+        font-size: 13px;
+        color: var(--text);
+      }
+    }
+  }
+  
+  .controls{
+    margin: 40px 0 5px 0;
+    i{
+      font-size: 28px;
+      user-select: none;
+      background: var(--text);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      i::nth-child(2), i::nth-child(4){
+        font-size: 43px;
+      }
+    }
+    #prev{
+      margin-right: -13px;
+    }
+    #next{
+      margin-left: -13px;
+    }
+    .play-pause{
+      height: 54px;
+      width: 54px;
+      display: flex;
+      cursor: pointer;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      &::before{
+        position: absolute;
+        content: "";
+        height: 43px;
+        width: 43px;
+        border-radius: inherit;
+        border: 1px solid var(--accent-color);
+      }
+      i{
+        background: var(--text);
+        background-clip: text;
+        position: absolute;
+      }
+    }
+  
+  }
+  .music-list{
+    position: absolute;
+    background: var(--navbar-color);
+    backdrop-filter: blur(5px);
+    width: 100%;
+    left: 0;
+    bottom: -55%;
+    opacity: 0;
+    pointer-events: none;
+    z-index: 5;
+    padding: 15px 30px;
+    border-radius: 15px;
+    box-shadow: 0px -5px 10px var(--shadow-color);
+    transition: all 0.15s ease-out;
+    &.show{
+      bottom: 0;
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+  .header{
+    .row{
+      display: flex;
+      align-items: center;
+      font-size: 19px;
+      color: var(--text);
+      i{
+        cursor: default;
+      }
+      span{
+        margin-left: 5px;
+      }
+    }
+    #close{
+      font-size: 22px;
+      color: var(--text);
+    }
+  } 
+  
+  .music-list{
+    ul{
+      margin: 10px 0;
+      max-height: 260px;
+      overflow: auto;
+      &::-webkit-scrollbar{
+        width: 0px;
+      }
+      li{
+        list-style: none;
+        display: flex;
+        cursor: pointer;
+        padding-bottom: 10px;
+        margin-bottom: 5px;
+        border-bottom: 1px solid var(--accent-color);
+        &:last-child{
+          border-bottom: 0px;
+        }
+        .row{
+          span{
+            font-size: 17px;
+            color: var(--text) !important;
+          }
+          p{
+            opacity: 0.9;
+            color: var(--text) !important;
+          }
+        } 
+        .audio-duration{
+          font-size: 16px;
+          color: var(--text) !important;
+        }
+        &.playing{
+          pointer-events: none;
+        }
+      }
+    }
+  } 
+  
