--- a/style.css
+++ b/style.css
@@ -1134,6 +1134,10 @@ body {
     scroll-margin-top: 80px;
   }
 
+  .work-container {
+    flex-direction: column;
+  }
+
   .homeclass {
     flex-direction: column;
   }
