--- a/style.scss
+++ b/style.scss
@@ -1140,6 +1140,9 @@ body{
   *{
     scroll-margin-top: 80px;
   }
+  .work-container{
+    flex-direction: column;
+  }
   .homeclass{
     flex-direction: column;
     .left{
