--- a/style.scss
+++ b/style.scss
@@ -1759,13 +1759,13 @@ body{
     }
   }
   .wrapper{
-    width: 380px;
+    width: 350px;
     padding: 25px 30px;
     overflow: hidden;
     position: relative;
     border-radius: 15px;
-    background: var(--secondary);
-    box-shadow: 0px 6px 15px var(--shadow-color);
+    background: var(--primary);
+    box-shadow: 0px 0px 15px var(--shadow-color);
   
     &.minimalized{
       height: 80px;
@@ -1843,7 +1843,7 @@ body{
       }
       &.active{
         transition: all 300ms linear;
-        width: 380px;
+        width: 350px;
         opacity: 1;
         .song-details{
           opacity: 1;
