--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ body {
   border-radius: 8px;
   margin: 0 auto;
 }
-.homeclass span {
+.homeclass .caret {
   color: var(--accent-color);
   font-size: 1em;
   margin-left: 2px;
@@ -531,7 +531,7 @@ body {
   -webkit-animation: slide-out-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           animation: slide-out-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-.page .slide-in .slide span {
+.page .slide-in .slide .caret {
   color: var(--accent-color);
   font-size: 1em;
   margin-left: 2px;
@@ -1873,7 +1873,7 @@ body {
   overflow: hidden;
   position: relative;
   border-radius: 15px;
-  background: var(--primary);
+  background: var(--navbar-color);
   box-shadow: 0px 0px 15px var(--shadow-color);
 }
 .wrapper.minimalized {
@@ -1884,8 +1884,8 @@ body {
   transition: all 300ms linear;
 }
 .wrapper.minimalized.paused .img-area {
-  -webkit-animation: rotate 1s infinite linear;
-          animation: rotate 1s infinite linear;
+  -webkit-animation: rotate 2s infinite linear;
+          animation: rotate 2s infinite linear;
 }
 .wrapper.minimalized .top-bar {
   position: absolute;
@@ -2160,7 +2160,7 @@ body {
   transition: all 0.15s ease-out;
 }
 .music-list.show {
-  bottom: 0;
+  top: 40%;
   opacity: 1;
   pointer-events: auto;
 }
