--- a/style.scss
+++ b/style.scss
@@ -469,7 +469,7 @@ body{
       }
       
     }
-    span {
+    .caret {
         color: var(--accent-color);
         font-size: 1em;
         margin-left: 2px;
@@ -514,7 +514,7 @@ body{
       color: var(--text);
       box-shadow: 0px 0px 10px var(--shadow-color);
       animation: slide-out-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      span {
+      .caret {
           color: var(--accent-color);
           font-size: 1em;
           margin-left: 2px;
@@ -1764,7 +1764,7 @@ body{
     overflow: hidden;
     position: relative;
     border-radius: 15px;
-    background: var(--primary);
+    background: var(--navbar-color);
     box-shadow: 0px 0px 15px var(--shadow-color);
   
     &.minimalized{
@@ -1775,7 +1775,7 @@ body{
       transition: all 300ms linear;
       &.paused{
         .img-area{
-          animation: rotate 1s infinite linear;
+          animation: rotate 2s infinite linear;
         }
       }
       .top-bar{
@@ -2040,6 +2040,7 @@ body{
     background: var(--navbar-color);
     backdrop-filter: blur(5px);
     width: 100%;
+    // height: 300px;
     left: 0;
     bottom: -55%;
     opacity: 0;
@@ -2050,7 +2051,7 @@ body{
     box-shadow: 0px -5px 10px var(--shadow-color);
     transition: all 0.15s ease-out;
     &.show{
-      bottom: 0;
+      top: 40%;
       opacity: 1;
       pointer-events: auto;
     }
