--- a/style.scss
+++ b/style.scss
@@ -1824,19 +1824,24 @@ body{
       .song-details{
         opacity: 0;
         position: absolute;
-        width: 180px;
+        // width: 180px;
         height: 50px;
-        top: -10px;
+        top: -5px;
+        color: rgb(146, 146, 146);
         left: 90px;
-        overflow: hidden;
         text-align: left;
         .name{
           font-size: 14px;
+          position: relative;
           width: 100%;
           height: 30px;
-          line-height: 0.9;
+          line-height: 1;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
         }
         .artist{
+          margin-top: -10px;
           font-size: 12px;
           line-height: normal;
         }
@@ -1847,6 +1852,7 @@ body{
         opacity: 1;
         .song-details{
           opacity: 1;
+          width: 150px;
         }
         .minimalize{
           opacity: 1;
@@ -1993,7 +1999,7 @@ body{
   }
   
   .controls{
-    margin: 40px 0 5px 0;
+    margin: 20px 0 -10px 0;
     i{
       font-size: 28px;
       user-select: none;
