--- a/style.scss
+++ b/style.scss
@@ -660,6 +660,83 @@ body{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  .my-work{
+    width: 100%;
+    margin-right: 100px;
+    // align-items: flex-start;
+    .work-btns{
+      position: absolute;
+      top: -30px;
+      display: flex;
+      justify-content: flex-end;
+      margin: 10px 25px;
+    }
+    .list-view-btn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 5px;
+      padding: 5px 10px;
+      border: 1px solid var(--text);
+      border-radius: 8px;
+      &:hover{
+        cursor: pointer;
+        border-color: var(--accent-color);
+      }
+      &.checked{
+        background-color: var(--primary);
+        box-shadow: 0 0 10px var(--shadow-color);
+      }
+    }
+    .grid-view-btn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px 10px;
+      border: 1px solid var(--text);
+      border-radius: 8px;
+      &:hover{
+        cursor: pointer;
+        border-color: var(--accent-color);
+      }
+      &.checked{
+        background-color: var(--primary);
+        box-shadow: 0 0 19px var(--shadow-color);
+      }
+    }
+    &_card-container.grid{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      max-height: 600px;
+      overflow: auto;
+      gap: 10px;
+      .my-work_card{
+        width: 250px;
+        height: 320px;
+        background-color: var(--navbar-color);
+        border-radius: 8px;
+      }
+    }
+    &_card-container.list{
+      margin-top: 25px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      max-height: 600px;
+      overflow: auto;
+      gap: 10px;
+      .my-work_card{
+        width: 90%;
+        height: 80px;
+        background-color: var(--navbar-color);
+        border-radius: 8px;
+      }
+    }
+  }
   .recent-work{
     width: 50%;
     display: flex;
@@ -1142,6 +1219,10 @@ body{
   }
   .work-container{
     flex-direction: column;
+    .my-work{
+      margin-right: 0;
+      margin-top: 30px;
+    }
   }
   .homeclass{
     flex-direction: column;
