--- a/style.css
+++ b/style.css
@@ -739,6 +739,37 @@ body {
   background-color: var(--navbar-color);
   border-radius: 8px;
 }
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid:hover {
+  cursor: pointer;
+}
+.work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid {
+  transform: rotateY(180deg);
+}
+.work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-front, .work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+.work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
 .work-container .my-work_card-container.list {
   margin-top: 25px;
   display: flex;
@@ -755,12 +786,48 @@ body {
   background-color: var(--navbar-color);
   border-radius: 8px;
 }
+.work-container .my-work_card-container.list .my-work_card .flip-card-grid {
+  display: none;
+}
 .work-container .recent-work {
   width: 50%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.my-work_card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
 }
 
 .contact {
