--- a/style.scss
+++ b/style.scss
@@ -719,8 +719,42 @@ body{
         height: 320px;
         background-color: var(--navbar-color);
         border-radius: 8px;
+        .flip-card-grid {
+          position: relative;
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          transition: transform 0.6s;
+          transform-style: preserve-3d;
+          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+          &:hover{
+            cursor: pointer;
+          }
+        }      
+        &.flipped{
+          .flip-card-grid {
+            transform: rotateY(180deg);
+            .flip-card-front, .flip-card-back {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+            }
+            .flip-card-front {
+              background-color: #bbb;
+              color: black;
+            }
+            .flip-card-back {
+              background-color: #2980b9;
+              color: white;
+              transform: rotateY(180deg);
+            }
+          }
+        } 
       }
     }
+
     &_card-container.list{
       margin-top: 25px;
       display: flex;
@@ -735,6 +769,9 @@ body{
         height: 80px;
         background-color: var(--navbar-color);
         border-radius: 8px;
+        .flip-card-grid{
+          display: none;
+        }
       }
     }
   }
@@ -746,7 +783,40 @@ body{
     flex-direction: column;
   }
 }
+///////////////////////////////////////////
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
 
+.my-work_card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+/////////////////////////////////////////////////////////////////
 
 
 
