--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 :root {
   --primary: #2e2e2e;
   --secondary: #252525;
+  --elem-color: #1b1b1b;
   --navbar-color: rgba(31, 31, 31, 0.902);
   --text: #b8b8b8;
   --accent-color: #ffa600;
@@ -690,7 +691,7 @@ body {
   justify-content: flex-end;
   margin: 10px 25px;
 }
-.work-container .my-work .list-view-btn {
+.work-container .my-work .list-view-btn, .work-container .my-work .grid-view-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -699,29 +700,13 @@ body {
   border: 1px solid var(--text);
   border-radius: 8px;
 }
-.work-container .my-work .list-view-btn:hover {
+.work-container .my-work .list-view-btn:hover, .work-container .my-work .grid-view-btn:hover {
   cursor: pointer;
   border-color: var(--accent-color);
 }
-.work-container .my-work .list-view-btn.checked {
-  background-color: var(--primary);
+.work-container .my-work .list-view-btn.checked, .work-container .my-work .grid-view-btn.checked {
+  background-color: var(--elem-color);
   box-shadow: 0 0 10px var(--shadow-color);
-}
-.work-container .my-work .grid-view-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px 10px;
-  border: 1px solid var(--text);
-  border-radius: 8px;
-}
-.work-container .my-work .grid-view-btn:hover {
-  cursor: pointer;
-  border-color: var(--accent-color);
-}
-.work-container .my-work .grid-view-btn.checked {
-  background-color: var(--primary);
-  box-shadow: 0 0 19px var(--shadow-color);
 }
 .work-container .my-work_card-container.grid {
   margin-top: 25px;
@@ -736,8 +721,6 @@ body {
 .work-container .my-work_card-container.grid .my-work_card {
   width: 280px;
   height: 320px;
-  background-color: var(--navbar-color);
-  border-radius: 8px;
 }
 .work-container .my-work_card-container.grid .my-work_card .flip-card-grid {
   position: relative;
@@ -751,10 +734,48 @@ body {
 .work-container .my-work_card-container.grid .my-work_card .flip-card-grid:hover {
   cursor: pointer;
 }
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back {
+  color: var(--text);
+  background-color: var(--elem-color);
+  transform: rotateY(180deg);
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_body {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px 20px;
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_body ul {
+  list-style-type: none;
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_body ul li {
+  display: flex;
+  align-items: flex-start;
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_footer {
+  display: flex;
+  flex-direction: column;
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_footer ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_footer ul li a svg {
+  fill: var(--text);
+}
+.work-container .my-work_card-container.grid .my-work_card .flip-card-grid .flip-card-back .card_footer ul li a:hover svg {
+  fill: var(--accent-color);
+}
 .work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid {
   transform: rotateY(180deg);
 }
 .work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-front, .work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-back {
+  border-radius: 8px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -762,13 +783,7 @@ body {
   backface-visibility: hidden;
 }
 .work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-.work-container .my-work_card-container.grid .my-work_card.flipped .flip-card-grid .flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
+  overflow: hidden;
 }
 .work-container .my-work_card-container.list {
   margin-top: 25px;
@@ -783,7 +798,7 @@ body {
 .work-container .my-work_card-container.list .my-work_card {
   width: 90%;
   height: 80px;
-  background-color: var(--navbar-color);
+  background-color: var(--elem-color);
   border-radius: 8px;
 }
 .work-container .my-work_card-container.list .my-work_card .flip-card-grid {
@@ -2052,7 +2067,7 @@ body {
   overflow: hidden;
   position: relative;
   border-radius: 15px;
-  background: var(--navbar-color);
+  background: var(--elem-color);
   box-shadow: 0px 0px 15px var(--shadow-color);
 }
 .wrapper.minimalized {
