--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 :root{
     --primary: #2e2e2e;
     --secondary: #252525;
+    --elem-color: #1b1b1b;
     --navbar-color: rgba(31, 31, 31, 0.902);
     --text: #b8b8b8;
     --accent-color: #ffa600;
@@ -672,7 +673,7 @@ body{
       justify-content: flex-end;
       margin: 10px 25px;
     }
-    .list-view-btn{
+    .list-view-btn,.grid-view-btn{
       display: flex;
       justify-content: center;
       align-items: center;
@@ -685,24 +686,8 @@ body{
         border-color: var(--accent-color);
       }
       &.checked{
-        background-color: var(--primary);
+        background-color: var(--elem-color);
         box-shadow: 0 0 10px var(--shadow-color);
-      }
-    }
-    .grid-view-btn{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 5px 10px;
-      border: 1px solid var(--text);
-      border-radius: 8px;
-      &:hover{
-        cursor: pointer;
-        border-color: var(--accent-color);
-      }
-      &.checked{
-        background-color: var(--primary);
-        box-shadow: 0 0 19px var(--shadow-color);
       }
     }
     &_card-container.grid{
@@ -717,8 +702,6 @@ body{
       .my-work_card{
         width: 280px;
         height: 320px;
-        background-color: var(--navbar-color);
-        border-radius: 8px;
         .flip-card-grid {
           position: relative;
           width: 100%;
@@ -730,11 +713,61 @@ body{
           &:hover{
             cursor: pointer;
           }
+          .flip-card-back {
+            color: var(--text);
+            background-color: var(--elem-color);
+            transform: rotateY(180deg);
+            .card{
+              &_header{
+                
+              }
+              &_body{
+                text-align: left;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                padding: 10px 20px;
+                ul{
+                  list-style-type: none;
+                  li{
+                    display: flex;
+                    // justify-content: center;
+                    align-items: flex-start;
+                  }
+                }
+              }
+              &_footer{
+                display: flex;
+                flex-direction: column;
+                ul{
+                  list-style-type: none;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: center;
+                  align-items: center;
+                  li{
+                    a{
+                      svg{
+                        fill: var(--text);
+                      }
+                      &:hover{
+                        svg{
+                          fill: var(--accent-color);
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
         }      
         &.flipped{
           .flip-card-grid {
             transform: rotateY(180deg);
             .flip-card-front, .flip-card-back {
+              border-radius: 8px;
               position: absolute;
               width: 100%;
               height: 100%;
@@ -742,13 +775,7 @@ body{
               backface-visibility: hidden;
             }
             .flip-card-front {
-              background-color: #bbb;
-              color: black;
-            }
-            .flip-card-back {
-              background-color: #2980b9;
-              color: white;
-              transform: rotateY(180deg);
+              overflow: hidden;
             }
           }
         } 
@@ -767,7 +794,7 @@ body{
       .my-work_card{
         width: 90%;
         height: 80px;
-        background-color: var(--navbar-color);
+        background-color: var(--elem-color);
         border-radius: 8px;
         .flip-card-grid{
           display: none;
@@ -1944,7 +1971,7 @@ body{
     overflow: hidden;
     position: relative;
     border-radius: 15px;
-    background: var(--navbar-color);
+    background: var(--elem-color);
     box-shadow: 0px 0px 15px var(--shadow-color);
   
     &.minimalized{
