--- a/style.scss
+++ b/style.scss
@@ -42,53 +42,60 @@ body{
   background-color: var(--secondary);
   position: fixed;
   font-size: 10rem;
-  .lds-ellipsis {
-    display: inline-block;
-    position: relative;
-    width: 160px;
-    height: 160px;
-  }
-  .lds-ellipsis div {
-    position: absolute;
-    top: 65px;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    background-color: var(--secondary);
-    box-shadow: 0px 0px 10px var(--accent-color);
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .lds-ellipsis div:nth-child(1) {
-    left: 16px;
-    animation: lds-ellipsis1 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(2) {
-    left: 16px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(3) {
-    left: 64px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(4) {
-    left: 112px;
-    animation: lds-ellipsis3 0.6s infinite;
+  .circle{
+    &__one{
+      width: 200px;
+      height: 200px;
+      border: 4px solid var(--accent-color);
+      border-radius: 50%;
+      border-color: var(--accent-color) var(--accent-color) var(--accent-color) transparent;
+      position: absolute;
+      animation: 1.2s spin linear infinite;
+      filter: drop-shadow(0px 0px 5px var(--accent-color));
+    }
+     &__two{
+      width: 150px;
+      height: 150px;
+      border: 4px solid var(--accent-color);
+      border-radius: 50%;
+      border-color: transparent  transparent var(--accent-color)  var(--accent-color);
+      position: absolute;
+       animation: 1s spin linear infinite;
+       filter: drop-shadow(0px 0px 5px var(--accent-color));
+    }
+     &__three{
+      width: 100px;
+      height: 100px;
+      border: 4px solid var(--accent-color);
+      border-radius: 50%;
+      border-color: var(--accent-color) transparent  transparent  var(--accent-color) ;
+      position: absolute;
+       animation: 0.8s spin linear infinite;
+       filter: drop-shadow(0px 0px 5px var(--accent-color));
+    }
   }
   .loading-text{
-    opacity: 0.2;
+    opacity: 0.1;
     font-weight: 700;
     font-size: 22vw;
     letter-spacing: 1vw;
     position: absolute;
     color: var(--text);
+    animation: 1.5s blink ease-in-out infinite;
   }
 }
 .preload-finished{
-  top: -30vh;
-  opacity: 0;
-  transition: 500ms linear;
+  // top: -130vh;
+  transform: translateY(-100%);
+  opacity: 0.4;
+  transition: 500ms linear 200ms;
   pointer-events: none;
- 
+  .circle{
+    &__one, &__two, &__three{
+      opacity: 0;
+      transition: 300ms linear;
+    }
+  }
 }
 ::-webkit-scrollbar {
     width: 12px;
@@ -682,8 +689,10 @@ body{
       border: 1px solid var(--text);
       border-radius: 8px;
       &:hover{
+        transition: 300ms ease-in-out;
         cursor: pointer;
         border-color: var(--accent-color);
+        color: var(--accent-color);
       }
       &.checked{
         background-color: var(--elem-color);
@@ -721,15 +730,17 @@ body{
             background-color: var(--elem-color);
             transform: rotateY(180deg);
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             .card{
               &_header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-color: var(--navbar-color);
-                margin-top: 0;
-                height: 80px;
-                top: 0;
+                // background-color: var(--primary);
+                height: 70px;
+                border-bottom: 1px solid var(--accent-color);
               }
               &_body{
                 text-align: left;
@@ -748,6 +759,8 @@ body{
                 }
               }
               &_footer{
+                // background-color: var(--primary);
+                border-top: 1px solid var(--accent-color);
                 display: flex;
                 flex-direction: column;
                 ul{
@@ -1929,6 +1942,26 @@ body{
     transform: rotate(360deg);
     }
   }
+  
+@keyframes spin{
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes blink{
+  0%{
+    opacity: 0.1;
+  }
+  50%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 0.1;
+  }
+}
   /////////////////////////////////////
 
 
