--- a/style.css
+++ b/style.css
@@ -47,9 +47,26 @@ body {
   height: 100vh;
   z-index: 200;
   top: 0;
-  background-color: var(--secondary);
   position: fixed;
   font-size: 10rem;
+}
+.preload .doors {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.preload .doors .left-side {
+  background-color: var(--elem-color);
+  height: 100%;
+  width: 50%;
+  border-top: 1px solid var(--accent-color);
+}
+.preload .doors .right-side {
+  background-color: var(--elem-color);
+  height: 100%;
+  width: 50%;
+  border-top: 1px solid var(--accent-color);
 }
 .preload .circle__one {
   width: 200px;
@@ -91,15 +108,31 @@ body {
   letter-spacing: 1vw;
   position: absolute;
   color: var(--text);
-  -webkit-animation: 1.5s blink ease-in-out infinite;
-          animation: 1.5s blink ease-in-out infinite;
 }
 
 .preload-finished {
-  transform: translateY(-100%);
-  opacity: 0.4;
-  transition: 500ms linear 200ms;
+  transition: 1000ms linear 500ms;
   pointer-events: none;
+}
+.preload-finished .loading-text {
+  opacity: 0;
+  transition: 500ms linear;
+}
+.preload-finished .doors .left-side {
+  transform: translateX(-100%);
+  transition: 1000ms ease-in-out 500ms;
+  -webkit-animation: 1ms disappear linear forwards;
+          animation: 1ms disappear linear forwards;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+.preload-finished .doors .right-side {
+  transform: translateX(100%);
+  transition: 1000ms ease-in-out 500ms;
+  -webkit-animation: 1ms disappear linear forwards;
+          animation: 1ms disappear linear forwards;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 .preload-finished .circle__one, .preload-finished .circle__two, .preload-finished .circle__three {
   opacity: 0;
@@ -471,6 +504,7 @@ body {
 }
 .homeclass .left {
   width: 50%;
+  min-height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2059,16 +2093,6 @@ body {
     transform: translate(48px, 0);
   }
 }
-@-webkit-keyframes rotate {
-  0% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotate {
-  0% {
-    transform: rotate(360deg);
-  }
-}
 @-webkit-keyframes spin {
   from {
     transform: rotate(0deg);
@@ -2107,11 +2131,29 @@ body {
     opacity: 0.1;
   }
 }
-@keyframes rotate {
-  0% {
+@-webkit-keyframes disappear {
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes disappear {
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes rotate {
+  from {
     transform: rotate(0deg);
   }
-  100% {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
     transform: rotate(360deg);
   }
 }
@@ -2132,8 +2174,10 @@ body {
   transition: all 300ms linear;
 }
 .wrapper.minimalized.paused .img-area {
-  -webkit-animation: rotate 2s infinite linear;
-          animation: rotate 2s infinite linear;
+  -webkit-animation: rotate 2s linear infinite;
+          animation: rotate 2s linear infinite;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 .wrapper.minimalized .top-bar {
   position: absolute;
@@ -2157,6 +2201,8 @@ body {
   position: absolute;
   border-radius: 50%;
   border: 1px solid var(--accent-color);
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
 }
 .wrapper.minimalized .img-area .dot {
   border: 2px solid var(--accent-color);
@@ -2215,6 +2261,8 @@ body {
 }
 .wrapper.minimalized.active .img-area {
   left: 5%;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
 }
 .wrapper.minimalized.active .controls {
   display: flex;
