--- a/style.scss
+++ b/style.scss
@@ -2113,6 +2113,7 @@ body{
 
         .dot{
           border: 2px solid var(--accent-color);
+          background-color: var(--elem-color);
           width: 15px;
           height: 15px;
           position: absolute;
