--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     scroll-margin-top: 140px;
+    // outline: 1px solid red;
 }
 body{
     height: 200vh;
@@ -484,7 +485,7 @@ body{
 }
 
 #about{
-    z-index: -10;
+    // z-index: -10;
     position: relative;
     animation: slide-in-right 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     
@@ -593,7 +594,32 @@ body{
   }
   }
 }
-
+///////////////////////////////// ABOUT ////////////////////////////////
+  #about{
+    .slide-in{
+      .slide{
+        .download{
+          margin: 50px 0px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 10px;
+          width: 150px;
+          text-decoration: none;
+          gap: 10px;
+          color: var(--text);
+          border: 1px solid var(--text);
+          background-color: var(--navbar-color);
+          border-radius: 8px;
+          &:hover{
+            border: 1px solid var(--accent-color);
+            color: var(--accent-color);
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
 
   ///////////////////////////////// SKILLS //////////////////////////////
   .skills-section{
@@ -753,6 +779,9 @@ body{
       max-height: 600px;
       overflow: auto;
       gap: 10px;
+      .list-item{
+        display: none;
+      }
       .my-work_card{
         width: 280px;
         height: 320px;
@@ -856,6 +885,35 @@ body{
       max-height: 600px;
       overflow: auto;
       gap: 10px;
+      .list-item{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 15px;
+        h2{
+          font-size: min(4vw, 20px);
+        }
+        p{
+          font-size: min(3vw, 18px);
+        }
+        ul{
+          list-style-type: none;
+          display: flex;
+          justify-content: flex-end;
+          li{
+            a{
+              svg{
+                fill: var(--text);
+              }
+              &:hover{
+                svg{
+                  fill: var(--accent-color);
+                }
+              }
+            }
+          }
+        }
+      }
       .my-work_card{
         width: 90%;
         height: 80px;
@@ -1128,6 +1186,7 @@ body{
   z-index: 20;
   width: min(70px, 12vw);
   height: min(120px, 30vw);
+  height: max-content;
 }
 #toggle-social{
   position: fixed;
@@ -1156,7 +1215,7 @@ body{
 }
 .social{
   position: fixed;
-  height: 100%;
+  // height: 100%;
   padding-left: min(20px, 1vw);
   font-size: 30px;
   margin-top: 25px;
@@ -1440,7 +1499,9 @@ body{
   }
   .navbar{
     bottom: 0;
+    // margin-left: 100px !important;
     border-radius: 0;
+    z-index: 100 !important;
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -1450,17 +1511,28 @@ body{
     align-items: center;
     .logo{
       display: none;
+      pointer-events: none;
     }
-
     .nav-items{
-      padding: 10px;
+      // padding: 10px;
       .last{
         padding: 22px;
       }
       .nav-item{
+        z-index: 10000 !important;
         a{
+          display: flex;
+          flex-direction: column-reverse;
+          justify-content: center;
+          align-items: center;
+          // outline: 1px solid red;
+          padding: 1px;
           .text{
-            display: none;
+            display: block;
+            font-size: 0.5rem;
+            position: absolute;
+            transform: translateY(150%);
+            text-align: center;
           }
           .icon{
             display: flex;
@@ -1496,7 +1568,7 @@ body{
             }
           }
           &:hover{
-            user-select: none;
+            // user-select: none;
             transition: all 300ms ease-in;
             svg{
               path{
@@ -1649,7 +1721,7 @@ body{
         display: none;
         a{
           .text{
-            display: none;
+            display: block;
           }
           &:hover{
             user-select: none;
@@ -1671,6 +1743,39 @@ body{
       position: absolute;
       right: 8rem;
       top: 6px;
+    }
+  }
+  .list-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 15px;
+    h2{
+      // background-color: red;
+      // padding: 0;
+      margin-top: 5px !important;
+      font-size: 1vw;
+    }
+    p{
+      font-size: 12px !important;
+      text-align: right;
+    }
+    ul{
+      list-style-type: none;
+      display: flex;
+      justify-content: flex-end;
+      li{
+        a{
+          svg{
+            fill: var(--text);
+          }
+          &:hover{
+            svg{
+              fill: var(--accent-color);
+            }
+          }
+        }
+      }
     }
   }
 }
